fix: rem reference + result text illegibility

--- a/frappé/theme.css
+++ b/frappé/theme.css
@@ -128,7 +128,7 @@
 
 /* rem */
 .rn-rem-reference {
-	color: var(--surface1);
+	color: var(--blue);
 }
 .rn-button {
 	color: var(--surface1);
@@ -207,4 +207,7 @@
 .dark .highlight-color--green {
 	background-color: rgba(var(--green-rgb), var(--tw-bg-opacity));
 	--tw-bg-opacity: 0.5;
+}
+#search-results__no-results {
+	color: var(--text);
 }
