--- a/latte/theme.css
+++ b/latte/theme.css
@@ -129,7 +129,7 @@
 
 /* rem */
 .rn-rem-reference {
-	color: var(--surface1);
+	color: var(--blue);
 }
 .rn-button {
 	color: var(--surface1);
@@ -208,4 +208,7 @@
 .light .highlight-color--green {
 	background-color: rgba(var(--green-rgb), var(--tw-bg-opacity));
 	--tw-bg-opacity: 0.5;
+}
+#search-results__no-results {
+	color: var(--text);
 }
