--- a/mocha/theme.css
+++ b/mocha/theme.css
@@ -141,7 +141,7 @@ TODO:
 
 /* rem */
 .rn-rem-reference {
-	color: var(--surface1);
+	color: var(--blue);
 }
 .rn-button {
 	color: var(--surface1);
@@ -220,4 +220,7 @@ TODO:
 .dark .highlight-color--green {
 	background-color: rgba(var(--green-rgb), var(--tw-bg-opacity));
 	--tw-bg-opacity: 0.5;
+}
+#search-results__no-results {
+	color: var(--text);
 }
